5/29/12 flesh out point-slope specializations
5/29/12 more base class extraction
5/29/12 extract base class for line graph view, specialize for different line forms
5/29/12 populate point-slope model and view, with considerable duplication to start
5/29/12 resurrect spinner-based equation from [64199]
5/23/12 get colors from modified line, instead of using color constants
5/23/12 rename ReducedSlopeInterceptEquationFactory to SlopeInterceptEquationFactory
5/23/12 moe more stuff to linegraphing.common.view
5/23/12 move icon creation methods to GraphNode
5/23/12 move view components used in tab 1 & 2 to linegraphing.common.view
5/23/12 move PointTool to linegraphing.common.model
5/23/12 change PointTool to use x1,y1 instead of yIntercept (more general)
5/23/12 collapse StraightLine class hierarchy to one class with slope-intercept and point-slope constructors
5/22/12 simplify Graph model
5/22/12 class hierarchy for lines
5/21/12 prevent slope=0/0 by skipping over zero rise or run (depending which is changing), do this in the model
5/17/12 in computation of dynamics rise range, prevent slope=0/0
5/17/12 cleanup of internal property observers in SlopeInterceptEquationNode
5/16/12 rename SlopeInterceptEquationNode2 to SlopeInterceptEquationNode
5/16/12 decided to use pickers instead of spinners, deleted version of interactive equation with spinners [64199]
# 0.00.13 (63678) Apr 20, 2012
4/19/12 fix sign on reduced equations when slope is an integer
4/19/12 restore use of pickers
# 0.00.12 (63651) Apr 19, 2012
4/19/12 identical to 0.00.11, but uses spinners instead of pickers
4/19/12 temporarily replace pickers with spinners, so we can compare in 2 identical dev versions
# 0.00.11 (63649) Apr 19, 2012
4/19/12 make rise/run values slightly less transparent, so that the values are more clearly-visible when they are on top of other things
4/19/12 make manipulators slightly larger, to encourage users to play with them
4/19/12 layout tweak in picker